--- a/src/scss/_prices.scss
+++ b/src/scss/_prices.scss
@@ -1,78 +1,6 @@
 @use 'vary.scss' as *;
 
-// .prices {
-//   padding: 40px;
-  
-//   &__table {
-//   width: 100%;
-//   border-collapse: collapse;
-//   margin-bottom: 16px;
-//   table-layout: fixed;
 
-//   thead {
-//     display: table;
-//     width: 100%;
-//     table-layout: fixed;
-//     color: #8e8e8e;
-//     background-color: transparent;
-//     margin-bottom: 8px;
-//   }
-
-//   thead th {
-//     font-family: "TT Lakes";
-//     font-weight: 500;
-//     font-size: 14px;
-//     text-align: left;
-//     padding: 16px 24px;
-//   }
-
-//   tbody {
-//     background-color: #FFFFFF;
-//     border-radius: 6px;
-//     overflow: hidden;
-//     display: block;   
-//   }
-
-//   tbody tr {
-//     display: table;
-//     width: 100%;
-//     table-layout: fixed;
-//     height: 64px;
-//   }
-
-//   tbody td {
-//     font-family: "TT Lakes";
-//     font-weight: 400;
-//     font-size: 14px;
-//     border-bottom: 1px solid $border;
-//     padding: 16px 24px;
-//     vertical-align: middle;
-//   }
-
-//   tbody tr:last-child td {
-//     border-bottom: none;
-//   }
-
- 
-//   th:nth-child(1),
-//   td:nth-child(1) { width: 45%; }
-//   th:nth-child(2),
-//   td:nth-child(2) { width: 20%; }
-//   th:nth-child(3),
-//   td:nth-child(3) { width: 20%; }
-//   th:nth-child(4),
-//   td:nth-child(4) { width: 15%; text-align: right; }
-// }
-
-
-//   &__btn {
-//     background: none;
-//     border: none;
-//     padding: 0;
-//     padding: 8px 10px;
-//     cursor: pointer;
-//     width: 119px;
-//   }
 .prices {
   padding: 40px;
 
@@ -81,7 +9,7 @@
     border-collapse: collapse;
     margin-bottom: 16px;
     table-layout: fixed;
-    overflow-x: auto; // горизонтальный скролл при маленьких экранах
+    overflow-x: auto; 
     display: block;
 
     thead {
@@ -98,7 +26,7 @@
       font-size: 14px;
       text-align: left;
       padding-left: 16px ;
-      white-space: nowrap; // предотвращает перенос текста
+      white-space: nowrap;
       height: 50px;
     }
 
@@ -124,9 +52,9 @@
       border-bottom: 1px solid $border;
       padding-left: 16px ;
       vertical-align: middle;
-      white-space: nowrap; // чтобы текст не переносился
+      white-space: nowrap; 
       overflow: hidden;
-      text-overflow: ellipsis; // если не помещается — "..."
+      text-overflow: ellipsis;
     }
 
     tbody tr:last-child td {
