--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,6 +65,7 @@ body {
     height: 58px;
     width: 100%;
     border-top: 1px solid $light_green-decor;
+    margin-top: 32px;
   }
 
   h3 {
@@ -81,6 +82,7 @@ body {
     width: 100%;
     text-align: left;
     border-top: 1px solid $light_green-decor;
+    margin-top: 32px;
   }
 
   .icon {
@@ -110,6 +112,7 @@ body {
     gap: 8px;
     font-family: "TT Lakes";
     font-weight: 500;
+    margin-left: 25px;
   }
 
 
