--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -1,7 +1,7 @@
 @use 'vary.scss' as *;
 
 .services {
-  padding: 40px 0;
+  padding-bottom: 40px;
   background-color: $gray-back;
   text-align: center;
 
